Code cleanup (#278)
* Fix sonar warnings

---------

Co-authored-by: kaklakariada <kaklakariada@users.noreply.github.com>