@@ -1,7 +1,5 @@
 package org.itsallcode.whiterabbit.jfxui.testutil.model;
 
-import static java.util.stream.Collectors.toList;
-
 import java.util.List;
 
 import org.testfx.api.FxRobot;
@@ -12,30 +10,35 @@ import javafx.scene.control.TreeTableView;
 public class JavaFxTreeTable<T>
 {
     private final TreeTableView<T> table;
+    private final Class<T> rowType;
 
-    private JavaFxTreeTable(FxRobot robot, TreeTableView<T> table)
+    private JavaFxTreeTable(final TreeTableView<T> table, final Class<T> rowType)
     {
         this.table = table;
+        this.rowType = rowType;
     }
 
     @SuppressWarnings("unchecked")
-    static <T> JavaFxTreeTable<T> find(FxRobot robot, String query, Class<T> rowType)
+    static <T> JavaFxTreeTable<T> find(final FxRobot robot, final String query, final Class<T> rowType)
     {
-        return new JavaFxTreeTable<>(robot, robot.lookup(query).queryAs(TreeTableView.class));
+        final TreeTableView<T> table = robot.lookup(query).queryAs(TreeTableView.class);
+        return new JavaFxTreeTable<>(table, rowType);
     }
 
     List<T> getRootChildNodes()
     {
         return table.getRoot().getChildren().stream()
                 .map(TreeItem::getValue)
-                .collect(toList());
+                .map(rowType::cast)
+                .toList();
     }
 
-    List<T> getChildNodes(int level1ChildIndex)
+    List<T> getChildNodes(final int level1ChildIndex)
     {
         return table.getRoot().getChildren().get(level1ChildIndex)
                 .getChildren().stream()
                 .map(TreeItem::getValue)
-                .collect(toList());
+                .map(rowType::cast)
+                .toList();
     }
 }
