@@ -1,6 +1,5 @@
 package org.itsallcode.whiterabbit.logic.model;
 
-import static java.util.stream.Collectors.toList;
 import static java.util.stream.Collectors.toMap;
 
 import java.time.Duration;
@@ -22,21 +21,23 @@ import org.itsallcode.whiterabbit.api.model.MonthData;
 import org.itsallcode.whiterabbit.logic.service.contract.ContractTermsService;
 import org.itsallcode.whiterabbit.logic.service.project.ProjectService;
 
-public class MonthIndex
+public final class MonthIndex
 {
     private final ModelFactory modelFactory;
     private final MonthData monthRecord;
     private final Map<LocalDate, DayRecord> days;
 
-    private MonthIndex(ModelFactory modelFactory, MonthData monthRecord, Map<LocalDate, DayRecord> days)
+    @SuppressWarnings("java:S2384") // Storing a copy of "days" is required here
+    private MonthIndex(final ModelFactory modelFactory, final MonthData monthRecord,
+            final Map<LocalDate, DayRecord> days)
     {
         this.modelFactory = Objects.requireNonNull(modelFactory, "modelFactory");
         this.monthRecord = monthRecord;
         this.days = days;
     }
 
-    public static MonthIndex create(ContractTermsService contractTerms, ProjectService projectService,
-            ModelFactory modelFactory, MonthData monthRecord)
+    public static MonthIndex create(final ContractTermsService contractTerms, final ProjectService projectService,
+            final ModelFactory modelFactory, final MonthData monthRecord)
     {
         final Map<LocalDate, DayData> jsonDays = monthRecord.getDays().stream()
                 .collect(toMap(DayData::getDate, Function.identity()));
@@ -59,7 +60,8 @@ public class MonthIndex
         return monthIndex;
     }
 
-    private static DayData createDummyDay(LocalDate date, ContractTermsService contractTerms, ModelFactory modelFactory)
+    private static DayData createDummyDay(final LocalDate date, final ContractTermsService contractTerms,
+            final ModelFactory modelFactory)
     {
         final DayData day = modelFactory.createDayData();
         day.setDate(date);
@@ -76,12 +78,12 @@ public class MonthIndex
         return YearMonth.of(monthRecord.getYear(), monthRecord.getMonth());
     }
 
-    public DayRecord getDay(LocalDate date)
+    public DayRecord getDay(final LocalDate date)
     {
         return days.get(date);
     }
 
-    public void put(DayRecord day)
+    public void put(final DayRecord day)
     {
         this.days.put(day.getDate(), day);
     }
@@ -91,7 +93,7 @@ public class MonthIndex
         final List<DayData> sortedNonDummyJsonDays = getSortedDays() //
                 .filter(d -> !d.isDummyDay()) //
                 .map(DayRecord::getJsonDay) //
-                .collect(toList());
+                .toList();
 
         final MonthData month = modelFactory.createMonthData();
         month.setOvertimePreviousMonth(monthRecord.getOvertimePreviousMonth());
@@ -112,7 +114,7 @@ public class MonthIndex
                 .sorted(Comparator.comparing(DayRecord::getDate));
     }
 
-    public void setOvertimePreviousMonth(Duration overtimePreviousMonth)
+    public void setOvertimePreviousMonth(final Duration overtimePreviousMonth)
     {
         monthRecord.setOvertimePreviousMonth(overtimePreviousMonth);
     }
@@ -139,6 +141,6 @@ public class MonthIndex
         return monthRecord.getDays().stream()
                 .filter(day -> day.getType() == DayType.VACATION)
                 .map(DayData::getDate)
-                .collect(toList());
+                .toList();
     }
 }
