@@ -1,7 +1,5 @@
 package org.itsallcode.whiterabbit.logic.service.plugin;
 
-import static java.util.stream.Collectors.toList;
-
 import java.nio.file.Path;
 import java.util.Collection;
 import java.util.Optional;
@@ -14,7 +12,7 @@ import org.itsallcode.whiterabbit.api.PluginConfiguration;
 import org.itsallcode.whiterabbit.api.features.PluginFeature;
 import org.itsallcode.whiterabbit.logic.Config;
 
-class AppPluginImpl implements AppPlugin
+final class AppPluginImpl implements AppPlugin
 {
     private static final Logger LOG = LogManager.getLogger(AppPluginImpl.class);
 
@@ -22,14 +20,14 @@ class AppPluginImpl implements AppPlugin
     private final Plugin plugin;
     private final Config config;
 
-    private AppPluginImpl(Config config, AppPluginOrigin origin, Plugin plugin)
+    private AppPluginImpl(final Config config, final AppPluginOrigin origin, final Plugin plugin)
     {
         this.config = config;
         this.origin = origin;
         this.plugin = plugin;
     }
 
-    public static AppPluginImpl create(Config config, AppPluginOrigin origin, Plugin plugin)
+    public static AppPluginImpl create(final Config config, final AppPluginOrigin origin, final Plugin plugin)
     {
         return new AppPluginImpl(config, origin, plugin);
     }
@@ -50,7 +48,7 @@ class AppPluginImpl implements AppPlugin
     {
         return Stream.of(AppPluginFeature.values())
                 .filter(feature -> supports(feature.getFeatureClass()))
-                .collect(toList());
+                .toList();
     }
 
     @Override
@@ -59,20 +57,21 @@ class AppPluginImpl implements AppPlugin
         return origin;
     }
 
-    public boolean supports(Class<? extends PluginFeature> featureType)
+    public boolean supports(final Class<? extends PluginFeature> featureType)
     {
         try
         {
             return plugin.supports(featureType);
         }
-        catch (final Exception e)
+        catch (final RuntimeException e)
         {
             LOG.warn("Error loading plugin '{}'", getId(), e);
             return false;
         }
     }
 
-    public <T extends PluginFeature> Optional<T> getFeature(Class<T> featureType)
+    @Override
+    public <T extends PluginFeature> Optional<T> getFeature(final Class<T> featureType)
     {
         return plugin.getFeature(featureType);
     }
@@ -95,19 +94,19 @@ class AppPluginImpl implements AppPlugin
 
     private class PluginConfigImpl implements PluginConfiguration
     {
-        private String prefixed(String key)
+        private String prefixed(final String key)
         {
             return plugin.getId() + "." + key;
         }
 
         @Override
-        public String getMandatoryValue(String key)
+        public String getMandatoryValue(final String key)
         {
             return config.getMandatoryValue(prefixed(key));
         }
 
         @Override
-        public Optional<String> getOptionalValue(String key)
+        public Optional<String> getOptionalValue(final String key)
         {
             return config.getOptionalValue(prefixed(key));
         }
